err/scio.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Scio-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Compiling './lib/python3.5/site-packages/dateutil/easter.py'...
***   File "./lib/python3.5/site-packages/dateutil/easter.py", line 55
    raise ValueError, "invalid method"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/parser.py'...
***   File "./lib/python3.5/site-packages/dateutil/parser.py", line 158
    l.append("%s=%s" % (attr, `value`))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/relativedelta.py'...
***   File "./lib/python3.5/site-packages/dateutil/relativedelta.py", line 118
    raise TypeError, "relativedelta only diffs datetime/date"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/rrule.py'...
***   File "./lib/python3.5/site-packages/dateutil/rrule.py", line 55
    raise ValueError, "Can't create weekday with n == 0"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/tz.py'...
***   File "./lib/python3.5/site-packages/dateutil/tz.py", line 78
    `self._name`,
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-1.5.egg-info'...
Listing './lib/python3.5/site-packages/scio'...
Compiling './lib/python3.5/site-packages/scio/autowsdl.py'...
***   File "./lib/python3.5/site-packages/scio/autowsdl.py", line 95
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scio/client.py'...
***   File "./lib/python3.5/site-packages/scio/client.py", line 286
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/scio/gen.py'...
***   File "./lib/python3.5/site-packages/scio/gen.py", line 54
    print gen(client)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
